test: testable email sending w/ dep injection
- Introduced IEmailService interface (moved to classes/interfaces/) to
allow for dependency injection
- Implemented EmailService wrapping Messaging.sendEmail and error handling.
- Added MockEmailService with configuration and verification helpers
- Updated EmailSendCommand to use IEmailService instance for dependency injection
- Refactored EmailSendCommand to use a mutable instance variable for IEmailService
- Updated all test methods in EmailSendCommandTest.cls
- Added or updated MockEmailService verification helpers
- package.xml and metadata files

Documented in `docs/instance-based-refactor-plan.md`

--- a/force-app/main/default/classes/commands/EmailSendCommand.cls
+++ b/force-app/main/default/classes/commands/EmailSendCommand.cls
@@ -7,6 +7,10 @@ public with sharing class EmailSendCommand implements IAcknowledgementCommand {
   private List<DonationAcknowledgementService.OpportunityResult> opportunityResults;
   private AcknowledgementCommandOutputs.SendOutput sendOutput;
 
+  // Mutable instance variable for dependency injection
+  @TestVisible
+  private IEmailService emailService = new EmailService();
+
   public EmailSendCommand(
     List<Messaging.SingleEmailMessage> emails,
     List<DonationAcknowledgementService.OpportunityResult> opportunityResults
@@ -29,7 +33,7 @@ public with sharing class EmailSendCommand implements IAcknowledgementCommand {
     }
 
     try {
-      Messaging.sendEmail(emails);
+      emailService.sendEmail(emails);
 
       // Mark all prepared opportunities as successful
       Date today = Date.today();
